@@ -47,6 +47,7 @@ extern int ts_main(int argc,char *argv[]);
 #define FUNC_TYPE_GENERAL	1
 #define FUNC_TYPE_MD		2
 #define FUNC_TYPE_CIPHER	3
+#define FUNC_TYPE_PKEY		4
 
 typedef struct {
 	int type;
