@@ -4,6 +4,11 @@
 
  Changes between 0.9.8a and 0.9.9  [xx XXX xxxx]
 
+  *) New function EVP_PKEY_asn1_get0_info() to retrieve information about
+     public key algorithms. New option to openssl utility:
+     "list-public-key-algorithms" to print out info.
+     [Steve Henson]
+
   *) Implement the Supported Elliptic Curves Extension for
      ECC ciphersuites from draft-ietf-tls-ecc-12.txt.
      [Douglas Stebila]
